	  chaotic are out for your blood anyway. Based on this, I revamped the call
	  guards/attack avatar bit so only neutral NPCs and guards call guards and
	  NPCs of all alignments help NPCs of the same alignment, while ignoring any
	  friendly fire. Disabled actors no longer call for help -- instead, if any
	  sympathetic witnesses are nearby, they will call for help and assist.

2013-01-19	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* readnpcs.cc: Fixed bug that caused monster actors to go away instead of
	  resuming their schedule on reload.
	* schedule.*: Created an 'arrest avatar' schedule for guards summoned to
	  arrest a thieving avatar.
	* gamewin.cc: Danger music will override all but combat music. Creating 1-3
	  guards to arrest avatar instead of 1, and all of them use the new schedule
	  to arrest the avatar. Danger music is forced to play when guards approach,
	  as happens on the original. Arrest schedule is considered to be combat for
	  determining if the NPC is hostile. Guards are of chaotic alignment as they
	  are in the original.
	* actors.cc: Arrest schedule does not seek foes. Local guards call for more
	  guards. All together, this fixes bug #3599723 "guards that were called by
	  npcs stop attacking on reload".
	Rev 7309
	* actors.cc, schedule.*: Implemented graze schedule, fixing bug #3601321
	  "Graze schedule not working properly".

2013-01-19	Malignant Manor <malignantmanor@users.sourceforge.net>
	* shape_info.txt: Fix typos that caused books to run the wrong usecode. This
	  fixes bug #3601322 Exploding books in Castle of White dragon don't explode

2013-01-19	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* schedule.cc: Fixing bug #3601456 "NPCs teleport out of bed when woken up".
	  Reduced random delay for Walk_to_schedule as it caused NPCs to stand still
	  for far too long in many cases.
	* actors.*: On schedule restore, party_id hasn't been set for party members